<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.sdjen</groupId>
	<artifactId>SISCache</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
		<!-- project.build.sourceEncoding>UTF-8</project.build.sourceEncoding -->
		<!--tomcat.version>9.0.11</tomcat.version -->
		<!-- <tomcat.version>7.0.32</tomcat.version> -->
	</properties>
	<build>
		<plugins> <!-- 下面这个plugin -->
			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<!--version>3.7.0</version-->
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix><!--指定classpath的前缀 -->
							<mainClass>org.sdjen.download.cache_sis.MainApp</mainClass><!--指定主类的类名 -->
						</manifest>
					</archive>
				</configuration>
			</plugin> <!-- -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<!--指定outputDirectory -->
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<!-- <outputDirectory>${project.build.directory}/classes/lib</outputDirectory> 
								Alternatively use ${project.build.directory}/classes/lib as OutputDirectory 
								to integrate all jar-files into the main jar, but then you will need to add 
								custom classloading code to load the jars. -->
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent -->
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<!--version>2.0.5.RELEASE</version-->
		<version>2.1.3.RELEASE</version>
	</parent>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<!--version>4.12</version-->
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<!--version>4.5.6</version-->
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.htmlparser/htmlparser -->
		<dependency>
			<groupId>org.htmlparser</groupId>
			<artifactId>htmlparser</artifactId>
			<version>2.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.11.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mapdb/mapdb -->
		<!--dependency> <groupId>org.mapdb</groupId> <artifactId>mapdb</artifactId> 
			<version>3.0.5</version> </dependency -->
		<!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
		<!--dependency> <groupId>org.hsqldb</groupId> <artifactId>hsqldb</artifactId> 
			<version>2.4.1</version -->
		<!-- scope>test</scope -->
		<!--/dependency -->
		<!-- https://mvnrepository.com/artifact/com.datastax.cassandra/cassandra-driver-core -->
		<dependency>
			<groupId>com.datastax.cassandra</groupId>
			<artifactId>cassandra-driver-core</artifactId>
			<!--version>3.3.0</version-->
		</dependency>
		<!-- dependency> <groupId>com.datastax.cassandra</groupId> <artifactId>cassandra-driver-extras</artifactId> 
			<version>3.1.1</version> </dependency -->
		<!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core -->
		<!--dependency> <groupId>org.apache.tomcat.embed</groupId> <artifactId>tomcat-embed-core</artifactId> 
			<version>${tomcat.version}</version> </dependency -->
		<!-- Elasticsearch核心依赖包 -->
		<!-- https://mvnrepository.com/artifact/org.elasticsearch.client/elasticsearch-rest-client -->
		<!--dependency> <groupId>org.elasticsearch.client</groupId> <artifactId>elasticsearch-rest-client</artifactId> 
			<version>6.4.2</version> </dependency -->

		<!-- https://mvnrepository.com/artifact/org.elasticsearch.client/transport -->
		<!--dependency> <groupId>org.elasticsearch.client</groupId> <artifactId>transport</artifactId> 
			<version>6.4.2</version> </dependency -->
		<!-- https://mvnrepository.com/artifact/org.elasticsearch/elasticsearch -->
		<!--dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch</artifactId> 
			<version>6.4.2</version> </dependency -->

		<!-- 日志依赖 -->
		<!--使用logback -->
		<!--dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-logging</artifactId>
		</dependency-->
		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<!--dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.0</version>
		</dependency-->
	</dependencies>
</project>